--- a/GraphProject/GraphProject.vcxproj.filters
+++ b/GraphProject/GraphProject.vcxproj.filters
@@ -48,4 +48,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\Documents\supportingFiles\data31.txt" />
+  </ItemGroup>
 </Project>
